--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -14,3 +14,10 @@ target_link_libraries(
         nana::nana
         perfkit::dashboard-core
 )
+
+set_target_properties(
+        ${PROJECT_NAME}
+
+        PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
+)
