Implement curl fetching via separated class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 project(perfkit-dashboard-gui)
 
-add_compile_options("/FIiso646.h")
+add_compile_options("/FIiso646.h" /wd4819)
 
 add_subdirectory(third/nana EXCLUDE_FROM_ALL)
 add_subdirectory(third/spdlog-1.9.2 EXCLUDE_FROM_ALL)
